# semantic_segmentation_model

./: .gitignore  README.md  dataset.py  decoder.py  download_dataset.py  encoder.py  inference.py  main.py  pyproject.toml  report.md  report.typ  scaling_study.py
